# RR-lite

./: Dockerfile  Makefile  README.md  pyproject.toml
rr/common/: __init__.py  rpeak_detection.py  utils.py
rr/estimate_rr/: ARM.py  ARP.py  AR_RR.py  CtA.py  CtO.py  Interpolate_RR.py  PKS.py  PZX.py  WCH.py  __init__.py  time_rr.py
rr/examples/: main_rr_estimation.py
rr/preprocess/: preprocess_signal.py
