[tool.poetry]
name = "rr"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.0.0"
numpy = "^1.24.2"
plotly = "^5.14.1"
scipy = "^1.10.1"
mne = "^1.3.1"
spectrum = "^0.8.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
